--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Voodoo G&A",
   "license": "UNLICENSED",
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "sequelize": "^6.17.0",
